website/furniture/public.css
/* ... */
#abc div.lingo a.letter.current { background-color: #333333; color: #ffffff; }
@media (max-width: 800px){
  [dir="ltr"] #abc div.lingo {padding-left: 10px; text-align: center;}
  [dir="rtl"] #abc div.lingo {padding-right: 10px; text-align: center;}
  [dir="ltr"] #abc div.lingo span.title {position: relative; top: 0px; left: 0px; width: auto; text-align: center; margin-bottom: 10px;}
  [dir="rtl"] #abc div.lingo span.title {position: relative; top: 0px; right: 0px; width: auto; text-align: center; margin-bottom: 10px;}
}

#topDomains {position: relative; columns: 2; margin: 0px 120px; margin-top: 50px; }
#topDomains div.domain {margin-bottom: 10px;}
#topDomains div.domain a {text-decoration: none; color: #000000;}
#topDomains div.domain a b {color: #333333;}
#topDomains div.domain a:hover {background-color: #f7f9ea; text-shadow: 1px 1px 0px #ffffff; color: rgb(0, 76, 131);}
#topDomains div.domain a:hover b {color: rgb(0, 76, 131);}
@media (max-width: 800px){
  #topDomains {columns: 1; margin-left: 0px; margin-right: 0px;}
}

.titleDomain {position: relative; margin-bottom: 10px; margin-top: 50px; border: 1px solid #cccccc; border-radius: 4px; padding: 10px 10px 10px 10px; font-size: 1.15em;}
.titleDomain a {text-decoration: none; color: #000000;}
.titleDomain a b {color: #333333;}
.titleDomain a:hover {background-color: #f7f9ea; text-shadow: 1px 1px 0px #ffffff; color: rgb(0, 76, 131);}
.titleDomain a:hover b {color: rgb(0, 76, 131);}
.titleDomain span.divider {margin: 0 0.25em;}

.childDomains {position: relative; columns: 2; margin: 0px; padding: 0px 120px; margin-top: 50px; padding-bottom: 50px; border-bottom: 1px solid #eeeeee; margin-bottom: 10px; }
.childDomains div.domain {margin-bottom: 10px;}
.childDomains div.domain a {text-decoration: none; color: #000000;}
.childDomains div.domain a b {color: #333333;}
.childDomains div.domain a:hover {background-color: #f7f9ea; text-shadow: 1px 1px 0px #ffffff; color: rgb(0, 76, 131);}
.childDomains div.domain a:hover b {color: rgb(0, 76, 131);}
@media (max-width: 800px){
  .childDomains {columns: 1; padding-left: 10px; padding-right: 10px; margin-top: 20px;}
}

.pager {margin: 0px -20px; margin-top: 5px; margin-bottom: -50px; overflow-x: auto; padding: 5px 5px; background-color: #eeeeee; border-radius: 40px;}
.pager a {border: 1px solid #336699; text-decoration: none; color: #333333; background-color: #eeeeee; border-radius: 40px; display: inline-block; text-align: center; padding: 5px; width: 1.35em; font-size: 1.35em; line-height: 1.35em;}
.pager a.back {float: left;}
.pager a.forward {float: right;}
.pager a:hover {background-color: #dddddd; color: #336699;}
.pager div.line {margin: 1em 10px; height: 20px; background-color: #999999;}
@media (max-width: 800px){
  .pager {margin-left: 0px; margin-right: 0px; margin-top: 20px; border-radius: 4px;}
}

#dictfooter { padding: 10px 0px 50px 0px; color: #666666; font-size: 0.9rem; }
#dictfooter > div {margin: 10px 0px;}
[dir="ltr"] #dictfooter > div.right {float: right;}
[dir="rtl"] #dictfooter > div.right {float: left;}
#dictfooter a {text-decoration: none; color: inherit; }
#dictfooter a:hover {color: var(--link); }
#dictfooter a.lic {position: relative; top: 2px;}
#dictfooter a.xml {margin-left: 10px;}

#sitefooter { padding: 10px 0px 50px 0px; color: #666666; font-size: 0.9rem; }
#sitefooter > div {margin: 10px 0px;}
[dir="ltr"] #sitefooter > div.right {float: right;}
[dir="rtl"] #sitefooter > div.right {float: left;}
#sitefooter a {text-decoration: none; color: #047063; }
#sitefooter a:hover {color: #059080; }
#sitefooter a.github {display: block; width: 20px; height: 19px; background-image: url(github.png);}
#sitefooter div.logolint {margin-top: 20px;}
#sitefooter div.logolint a {display: inline-block; vertical-align: middle; margin-inline-end: 20px;}
#sitefooter div.logolint a.dcu {background-image: url(logo_dcu.png); width: 76px; height: 83px;}

#viewer {padding: 0px 0px !important; float: left; max-width: 930px; width: 100%}

.error404 {text-align: center; line-height: normal; margin: 100px auto 0px auto;}
.error404 .num {font-size: 8rem; color: #dddddd; text-shadow: 2px 2px 0px #cccccc; }
.error404 .desc {color: #666666; margin-top: 10px}

body.sitehome { overflow: auto !important;}
body.sitehome .invelope.top {margin: 50px auto 25px auto; padding-top: 50px;}
body.sitehome .invelope.top > div.clear {clear: both;}
[dir="ltr"] div.leftie {float: left; width: 50%; box-sizing: border-box; padding: 20px 40px 0px 0px; border-right: 1px solid #03A491;}
[dir="rtl"] div.leftie {float: right; width: 50%; box-sizing: border-box; padding: 20px 0px 0px 40px; border-left: 1px solid #03A491;}
[dir="ltr"] div.rightie {float: left; width: 50%; box-sizing: border-box; border-left: 1px solid #03A491; padding: 20px 0px 20px 40px; position: relative; right: 1px;}
[dir="rtl"] div.rightie {float: right; width: 50%; box-sizing: border-box; border-right: 1px solid #03A491; padding: 20px 40px 20px 0px; position: relative; right: -1px;}
@media (max-width: 800px){
  body.sitehome .invelope.top {margin-top: 50px;}
  div.leftie {float: none; width: auto; box-sizing: border-box; padding: 0px 0px 0px 0px; border-right: 0px}
  div.rightie {float: none; width: auto; box-sizing: border-box; padding: 40px 0px 0px 0px; border-left: 0px; left: 0px; margin-top: 40px;}
}

div.welcome {font-size: 1.1rem; line-height: 1.5em; color: #666666; min-height: 500px;}
div.welcome > div.intro {color: #333333;}
div.welcome > div.point { margin: 20px 0px;}
div.welcome > div.point > div.title {}
html[dir="ltr"] div.welcome > div.point > div.title > a {font-weight: bold; background-image: url(signpost-ltr.png); background-position: top left; background-repeat: no-repeat; padding-left: 50px; display: block; min-height: 30px;}
/* ... */

